--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "video_conferencing",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "dotenv -e .env -- node server.js",
+  "dev": "nodemon server.js"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
